<resources>
    // general
    <string name="app_name">TennisApplication</string>
    <string name="general_mytennis_text">MyTennis</string>

    // main page
    <string name="main_page_login_text">Login</string>
    <string name="main_page_username_text">Username</string>
    <string name="main_page_password_text">Password</string>
    <string name="main_page_create_new_account_text">New ? Create new account</string>

    // home page
    <string name="home_page_book_a_court_text">Book a court</string>
    <string name="home_page_court_overview_text">List of Reservations</string>

    // court overview + indoor and outdoor selection
    <string name="court_indoor_text">Indoor</string>
    <string name="court_Outdoor_text">Outdoor</string>
    <string name="place_selection_selection_demand_text">Please select one \n of the following:</string>

    // book a court
    <string name="select_a_date_text">Select a date:</string>

    // time selection
    <string name="select_a_time_text">Select a time:</string>
    <string name="button7_text">07:00</string>
    <string name="button8_text">08:00</string>
    <string name="button9_text">09:00</string>
    <string name="button10_text">10:00</string>
    <string name="button11_text">11:00</string>
    <string name="button12_text">12:00</string>
    <string name="button13_text">13:00</string>
    <string name="button14_text">14:00</string>
    <string name="button15_text">15:00</string>
    <string name="button16_text">16:00</string>
    <string name="button17_text">17:00</string>
    <string name="button18_text">18:00</string>
    <string name="button19_text">19:00</string>
    <string name="button20_text">20:00</string>
    <string name="button21_text">21:00</string>
    <string name="button22_text">22:00</string>

    // court selection
    <string name="select_a_court">Select a court:</string>

    // summary
    <string name="summary_summary_text">Summary:</string>
    <string name="summary_date_text">Date:</string>
    <string name="summary_court_nb_text">Court nb:</string>
    <string name="summary_from_text">From:</string>
    <string name="summary_to_text">To:</string>
    <string name="summary_name_text">Name:</string>
    <string name="summary_modify_text">Modify</string>
    <string name="summary_book_text">Book</string>
    <string name="playerName"></string>

    //register
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="phone">phone</string>
    <string name="password">Password</string>
    <string name="passwordRep">confirm password</string>
    <string name="button_newAccount">Register</string>
    <string name="error_invalid_password">This password is incorrect</string>
    <string name="error_invalid_email">This email is incorrect</string>


    //edit account
    <string name="account_list_of_reservations">List of reservations</string>
    <string name="account_phone_number">Phone:</string>
    <string name="account_address">Address:</string>
    <string name="account_e_mail">E-mail</string>
    <string name="account_age">Age:</string>
    <string name="account_title">Your Account:</string>
    <string name="editButton_txt">Edit</string>
    <string name="deleteButton_txt">Delete</string>
    <string name="edit_page_title">Edit:</string>


    //settings page
    <string name="settings_page_title">Settings:</string>
    <string name="settings_page_subtitle">Language:</string>
    <string name="settings_page_french">French</string>
    <string name="settings_page_english">English</string>
    <string name="settings_page_button">Change Settings</string>


    //reservation details
    <string name="reservation_details_title">Reservation Details:</string>


    //about page
    <string name="about_page_title">About:</string>
    <string name="about_page_description">This application was made by Daniel Coimbra and Theo Choffat for the mobile developpement module. This project was supervised by our teacher Dr.Michael Schumacher. Date of creation: 29.03.2022</string>


    //Reinitialize Database
    <string name="action_data">Reset Demo Data</string>
    <string name="resetMessage">Do you want to reset the DB</string>
    <string name="actionReseted">Reset</string>
    <string name="dataInitiated">Demo data initiated</string>
    <string name="actionCancel">Cancel</string>


    //menu
    <string name="menu_list_logout">Logout</string>
    <string name="menu_list_about">About</string>
    <string name="menu_list_menu">Menu</string>
    <string name="menu_list_settings">Settings</string>
    <string name="menu_list_account">Account</string>


    //deleteReservation
    <string name="title_activity_delete_reservation">Delete Reservation</string>
    <string name="reservation_delete_msg">Do you want to delete the reservation %1$s?</string>
    <string name="action_accept">Delete</string>
    <string name="reservation_deleted">Reservation Deleted</string>
    <string name="action_cancel">Cancel</string>

    //EditReservation
    <string name="dateEdit">Edit Date</string>
    <string name="hourEdit">Edit Hour</string>
    <string name="error_invalid_champ">No information in this text box</string>

</resources>