<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_orange"
    tools:context=".CourtTypeActivity">

    <include layout="@layout/toolbar"></include>

    <TextView
        android:id="@+id/selectcourttypetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_transparent_button"
        android:padding="10dp"
        android:text="@string/place_selection_selection_demand_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"></TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/indoorbutton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectcourttypetitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:text="@string/court_indoor_text"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold"
        app:backgroundTint="@null"></com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/outdoorbutton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/indoorbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:text="@string/court_Outdoor_text"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold"
        app:backgroundTint="@null"></com.google.android.material.button.MaterialButton>

    <ImageView
        android:id="@+id/imagetenniscourt"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/tennis_court_image"
        android:layout_below="@id/outdoorbutton"
        android:layout_marginTop="70dp"></ImageView>

</RelativeLayout>