<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EditReservationActivity">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/menubutton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/planimage"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="76dp"
        android:clickable="true"
        android:src="@drawable/menu_button_image"/>

    <TextView
        android:id="@+id/editReservationView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/rounded_transparent_button"
        android:padding="10dp"
        android:text="@string/edit_page_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/tv_dateEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/editReservationView"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/dateEdit"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/tv_hourEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hourEdit"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/tv_dateEdit"
        android:background="@drawable/rounded_edittext"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>


    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hourEdit"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_transparent_button"
        android:drawablePadding="20dp"
        android:padding="15dp"
        android:text="Validate"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold"
        app:backgroundTint="@null"/>


</RelativeLayout>